<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewCarInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alexanderpopov.car.nameplate.activitys.CarInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/variable_place_text"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/carVinSchemeImageViewCarInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/carSchemeInfoTextViewCarInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_place_text"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/mCarVinImageViewCarInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/mCarVin2ImageViewCarInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_text"
            android:textColor="#000" />

        <Button
            android:id="@+id/btnChoiceModelCarInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice_model_btn" />

        <Button
            android:id="@+id/btnAllColorListCarInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color_list_btn"/>
    </LinearLayout>


</ScrollView>
